--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Contact Us</h1>
+        <h1>kav gangu</h1>
         
         <!-- Success message (hidden by default) -->
         <div id="success-message" class="success-message">
